[tool.poetry]
name = "ps-app"
version = "0.1.0"
description = ""
authors = ["Jesse Egbosionu <dev@jesseinit.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
